--- a/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Power-Strings.json
+++ b/mojichimera/src/main/resources/mojichimeraResources/localization/zhs/mojichimera-Power-Strings.json
@@ -21,8 +21,8 @@
       "在下个回合开始时，将 #b%1$s 张 %2$s 加入手牌。"
     ]
   },
-  "mojichimera:SteelProtocolPower": {
-    "NAME": "钢铁协议",
+  "mojichimera:SteelizePower": {
+    "NAME": "钢铁化",
     "DESCRIPTIONS": ["本回合打出的下 #b%1$s 张牌数值增加 #b%2$s%% 。"]
   },
   "mojichimera:StormProtocolPower": {
@@ -31,11 +31,23 @@
   },
   "mojichimera:DarkProtocolPower": {
     "NAME": "黑暗协议",
-    "DESCRIPTIONS": ["每 消耗 一张牌，打出 #b%1$s 张 %2$s 。"]
+    "DESCRIPTIONS": ["每 消耗 一张牌，打出 #b%1$s 张 %2$s 。由该效果打出的牌不会触发效果。"]
   },
   "mojichimera:RushdownProtocolPower": {
     "NAME": "猛虎协议",
     "DESCRIPTIONS": ["每当你进入 愤怒 时，打出 #b%1$s 张 %2$s 。"]
+  },
+  "mojichimera:ThornsProtocolPower": {
+    "NAME": "荆棘协议",
+    "DESCRIPTIONS": ["每当你受到攻击伤害时，对伤害来源打出 #b%1$s 张 %2$s 。"]
+  },
+  "mojichimera:FireBreathingProtocolPower": {
+    "NAME": "火焰吐息协议",
+    "DESCRIPTIONS": ["每当你抽到一张 状态牌 或 诅咒 牌 时，打出 #b%1$s 张 %2$s 。"]
+  },
+  "mojichimera:SadisticProtocolPower": {
+    "NAME": "残虐协议",
+    "DESCRIPTIONS": ["每当你对一名敌人造成负面状态时，打出 #b%1$s 张 %2$s 。由该效果打出的牌不会触发效果。"]
   },
   "mojichimera:FreePower": {
     "NAME": "免费",
